fixing some bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright 2013 Google Inc. All rights reserved.
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.videohacks"
     android:versionCode="33"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="18"
-        android:targetSdkVersion="18" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
@@ -36,7 +17,7 @@
         android:theme="@style/AppTheme" >
         <!-- android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar" > -->
         <activity
-            android:name="com.android.videohacks.MainActivity"
+            android:name="com.android.videohacks.ui.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,31 +26,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.android.videohacks.ReadPixelsActivity"
+            android:name="com.android.videohacks.ui.ReadPixelsActivity"
             android:label="@string/title_activity_read_pixels" >
         </activity>
         <activity
-            android:name="com.android.videohacks.PlayMovieActivity"
+            android:name="com.android.videohacks.ui.PlayMovieActivity"
             android:label="@string/title_activity_play_movie" >
         </activity>
         <activity
-            android:name="com.android.videohacks.LiveCameraActivity"
+            android:name="com.android.videohacks.ui.LiveCameraActivity"
             android:label="@string/title_activity_live_camera" >
         </activity>
         <activity
-            android:name="com.android.videohacks.CameraCaptureActivity"
+            android:name="com.android.videohacks.ui.CameraCaptureActivity"
             android:label="@string/title_activity_camera_capture" >
         </activity>
         <activity
-            android:name="com.android.videohacks.TextureViewGLActivity"
+            android:name="com.android.videohacks.ui.TextureViewGLActivity"
             android:label="@string/title_activity_texture_view_gl" >
         </activity>
         <activity
-            android:name="com.android.videohacks.TextureViewCanvasActivity"
+            android:name="com.android.videohacks.ui.TextureViewCanvasActivity"
             android:label="@string/title_activity_texture_view_canvas" >
         </activity>
         <activity
-            android:name="com.android.videohacks.RecordFBOActivity"
+            android:name="com.android.videohacks.ui.RecordFBOActivity"
             android:label="@string/title_activity_record_fbo"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
 
@@ -81,59 +62,59 @@
             <!-- android:theme="@android:style/Theme.NoTitleBar.Fullscreen" -->
         </activity>
         <activity
-            android:name="com.android.videohacks.ChorTestActivity"
+            android:name="com.android.videohacks.ui.ChorTestActivity"
             android:label="@string/title_activity_chor_test" >
         </activity>
         <activity
-            android:name="com.android.videohacks.DoubleDecodeActivity"
+            android:name="com.android.videohacks.ui.DoubleDecodeActivity"
             android:label="@string/title_activity_double_decode" >
         </activity>
         <activity
-            android:name="com.android.videohacks.ContinuousCaptureActivity"
+            android:name="com.android.videohacks.ui.ContinuousCaptureActivity"
             android:label="@string/title_activity_continuous_capture" >
         </activity>
         <activity
-            android:name="com.android.videohacks.SoftInputSurfaceActivity"
+            android:name="com.android.videohacks.ui.SoftInputSurfaceActivity"
             android:label="@string/title_activity_soft_input_surface" >
         </activity>
         <activity
-            android:name="com.android.videohacks.HardwareScalerActivity"
+            android:name="com.android.videohacks.ui.HardwareScalerActivity"
             android:label="@string/title_activity_hardware_scaler"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
         <activity
-            android:name="com.android.videohacks.GlesInfoActivity"
+            android:name="com.android.videohacks.ui.GlesInfoActivity"
             android:label="@string/title_activity_gles_info" >
         </activity>
         <activity
-            android:name="com.android.videohacks.PlayMovieSurfaceActivity"
+            android:name="com.android.videohacks.ui.PlayMovieSurfaceActivity"
             android:label="@string/title_activity_play_movie_surface" >
         </activity>
         <activity
-            android:name="com.android.videohacks.MultiSurfaceActivity"
+            android:name="com.android.videohacks.ui.MultiSurfaceActivity"
             android:label="@string/title_activity_multi_surface_test"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
-            android:name="com.android.videohacks.CodecOpenActivity"
+            android:name="com.android.videohacks.ui.CodecOpenActivity"
             android:label="@string/title_activity_codec_open" >
         </activity>
         <activity
-            android:name="com.android.videohacks.TextureUploadActivity"
+            android:name="com.android.videohacks.ui.TextureUploadActivity"
             android:label="@string/title_activity_texture_upload" >
         </activity>
         <activity
-            android:name="com.android.videohacks.ColorBarActivity"
+            android:name="com.android.videohacks.ui.ColorBarActivity"
             android:label="@string/title_color_bar"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
         <activity
-            android:name="com.android.videohacks.ScheduledSwapActivity"
+            android:name="com.android.videohacks.ui.ScheduledSwapActivity"
             android:label="@string/title_scheduled_swap"
             android:theme="@android:style/Theme.Black" >
         </activity>
         <activity
-            android:name="com.android.videohacks.TextureFromCameraActivity"
+            android:name="com.android.videohacks.ui.TextureFromCameraActivity"
             android:label="@string/title_texture_from_camera"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
