--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.2'
 
     defaultConfig {
-        applicationId "com.android.videohacks"
+        applicationId "com.github.teocci.videohacks"
         minSdkVersion 18
         targetSdkVersion 25
     }
